# level-synthesizer

./: CMakeLists.txt
docs/: Level Synthesizer Architecture.md  LevelSynth.md  claude.md  mgsl-spec.md
tests/: CMakeLists.txt  test_grid.cpp  test_tagset.cpp
